--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,9 +7,10 @@ description: |
 adopt-info: steam
 grade: stable
 confinement: strict
-architectures:
-  - build-on: amd64
-base: core22
+platforms:
+  amd64:
+    build-on: [amd64]
+base: core24
 compression: lzo
 assumes:
   - snapd2.62
@@ -186,6 +187,7 @@ parts:
     stage-packages:
       - libasound2
       - libasound2-plugins
+      - libmp3lame0
       - yad
     stage:
       # restrict to only audio-related files - you need to ensure
@@ -239,7 +241,7 @@ parts:
     source: https://github.com/mesonbuild/meson.git
     source-tag: "1.8.2"
     override-build: |
-      python3 -m pip install .
+      python3 -m pip install . --break-system-packages
       mkdir -p $CRAFT_PART_INSTALL/usr/lib/python3/dist-packages
       rm -rf $CRAFT_PART_INSTALL/usr/lib/python3/dist-packages/meson*
       python3 -m pip install --target=$CRAFT_PART_INSTALL/usr .
@@ -387,8 +389,8 @@ parts:
       - libvulkan1:amd64
       - libxml2:i386
       - libxml2:amd64
-      - libicu70:i386
-      - libicu70:amd64
+      - libicu74:i386
+      - libicu74:amd64
       - zlib1g:i386
       - zlib1g:amd64
       - xdg-utils
